# personal_site

./: .gitignore  .tool-versions  Makefile  README.md  index.html  pyproject.toml  requirements.txt
app/: __init__.py  constants.py  freezer.py  routes.py
app/static/css/: landing.css  terminal.css
app/templates/: base.html  index.html  terminal.html  terminal.jinja
static/css/: landing.css
