[tool.poetry]
name = "zschumacher"
version = "0.1.0"
description = ""
authors = ["Zach Schumacher <zschu15@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Frozen-Flask = "^0.15"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
